# contractor

./: .gitmodules  CMakeLists.txt  MissingOptimizations.md  README.md  vcpkg.json
.github/workflows/: build.yml
cmake/: FindFilesystem.cmake  setup_dependencies.cmake
include/: ExitCodes.hpp  Literals.hpp
include/formatting/: ITFExporter.hpp  PrettyPrinter.hpp
include/parser/: BufferedStreamReader.hpp  DecompositionParser.hpp  GeCCoExportParser.hpp  IndexSpaceParser.hpp  Parser.hpp  SymmetryListParser.hpp  TensorRenameParser.hpp
include/processor/: Antisymmetrizer.hpp  Factorization.hpp  Factorizer.hpp  PrinterWrapper.hpp  Simplifier.hpp  SpinIntegrator.hpp  SpinSummation.hpp  Symmetrizer.hpp
include/terms/: BinaryTerm.hpp  CompositeTerm.hpp  GeneralTerm.hpp  Index.hpp  IndexPair.hpp  IndexPermutation.hpp  IndexSpace.hpp  IndexSpaceMeta.hpp  IndexSubstitution.hpp  PermutationGroup.hpp  Tensor.hpp  TensorDecomposition.hpp  TensorRename.hpp  TensorSubstitution.hpp  Term.hpp  TermGroup.hpp  UnoptimizedTerm.hpp
include/utils/: HeapsAlgorithm.hpp  IndexSpaceResolver.hpp  Iterable.hpp  IterableView.hpp  PairingGenerator.hpp  SortUtils.hpp  TermList.hpp  Utils.hpp
samples/: density_fitting.decomposition  index_spaces.json  itf_renaming.json  run_samples.sh  sample_renaming.json
samples/CC2/: CC2_LAG.EXPORT  CC2_RES2.EXPORT  cc2.symmetry
samples/CCD/: ccd.symmetry
samples/CCSD/: ccsd.symmetry
scripts/: runClangFormat.sh
src/: .gitignore  CMakeLists.txt  main.cpp
src/formatting/: CMakeLists.txt  ITFExporter.cpp  PrettyPrinter.cpp
src/parser/: BufferedStreamReader.cpp  CMakeLists.txt  DecompositionParser.cpp  GeCCoExportParser.cpp  IndexSpaceParser.cpp  Parser.cpp  SymmetryListParser.cpp  TensorRenameParser.cpp
src/processor/: CMakeLists.txt  Factorization.cpp  Factorizer.cpp  Simplifier.cpp  SpinIntegrator.cpp  a.out  test.cpp
src/terms/: BinaryTerm.cpp  CMakeLists.txt  GeneralTerm.cpp  IndexPermutation.cpp  IndexSpaceMeta.cpp  IndexSubstitution.cpp  PermutationGroup.cpp  Tensor.cpp  TensorDecomposition.cpp  TensorRename.cpp  TensorSubstitution.cpp  Term.cpp  UnoptimizedTerm.cpp
src/utils/: CMakeLists.txt  IndexSpaceResolver.cpp  PairingGenerator.cpp  TermList.cpp
tests/: CMakeLists.txt  IndexHelper.hpp
tests/input_files/parser/: sample.decomposition  syntax.symmetry
tests/parser/: AbstractParserTest.cpp  BufferedStreamReaderTest.cpp  CMakeLists.txt  DecompositionParserTest.cpp  GeCCoExportParserTest.cpp  IndexSpaceParserTest.cpp  ParserTest.cpp  SymmetryListParserTest.cpp
tests/processor/: AntisymmetrizerTest.cpp  CMakeLists.txt  FactorizationTest.cpp  FactorizerTest.cpp  SimplifierTest.cpp  SpinIntegratorTest.cpp  SpinSummationTest.cpp  SymmetrizerTest.cpp
tests/terms/: BinaryTermTest.cpp  CMakeLists.txt  CompositeTermTest.cpp  GeneralTermTest.cpp  IndexPermutationTest.cpp  IndexSpaceMetaTest.cpp  IndexSpaceTest.cpp  IndexSubstitutionTest.cpp  IndexTest.cpp  PermutationGroupTest.cpp  TensorDecompositionTest.cpp  TensorSubstitutionTest.cpp  TensorTest.cpp  TermTest.cpp  UnoptimizedTermTest.cpp
tests/utils/: CMakeLists.txt  HeapsAlgorithmTest.cpp  IndexSpaceResolverTest.cpp  IterableTest.cpp  PairingGeneratorTest.cpp  TermListTest.cpp
